--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,32 @@ http {
 
     server {
         listen 80;
+        server_name toodev.org www.your_domain;
+        return 301 https://$host$request_uri;
+        
+        # location / {
+        #     proxy_pass http://ws1;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # }
+
+        # location /about {
+        #     proxy_pass http://ws2;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name toodev.org www.your_domain;
+
+        ssl_certificate /etc/letsencrypt/live/toodev.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/toodev.org/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             proxy_pass http://ws1;
